crates/language-v2/tests/src/fail/p3_references/invalid_version/test.stderr
error: Reference 'Baz' is only defined in '2.0.0..3.0.0', but not in '3.0.0..MAX'.
  --> src/fail/p3_references/invalid_version/test.rs:19:45
   |
19 | ...                   reference = Baz,
   |                                   ^^^

error: Reference 'Baz' is only defined in '2.0.0..3.0.0', but not in '1.0.0..2.0.0'.
  --> src/fail/p3_references/invalid_version/test.rs:24:45
   |
24 | ...                   reference = Baz,
   |                                   ^^^

error: Reference 'Baz' is only defined in '2.0.0..3.0.0', but not in '1.0.0..2.0.0 | 3.0.0..MAX'.
  --> src/fail/p3_references/invalid_version/test.rs:29:45
   |
29 | ...                   reference = Baz
   |                                   ^^^
